[project]
name = "merge-sort"
version = "0.1.0"
description = ""
authors = [
    {name = "Aldrey Sandre",email = "165036139+Code-AldreySandre@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.11.0,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
